--- a/popup.css
+++ b/popup.css
@@ -20,7 +20,7 @@ body {
   height: auto;
   display: flex;
   flex-direction: column;
-  padding: 10px 16px;
+  padding: 6px 10px;
   border: 1px solid #aaa;
 }
 
@@ -70,6 +70,7 @@ body {
 
 #prompt {
   height: 2rem;
+  margin-bottom: 6px;
 }
 
 #parseResults {
@@ -91,4 +92,17 @@ ol {
 #loggedIn {
   align-items: center;
   font-size: 10px;
+}
+
+button {
+  background-color: #000;
+  color: #FFF;
+  border: 1px solid #333;
+  padding: 4px 12px;
+  border-radius: 12px;
+}
+
+#logoutButton {
+  color: #000;
+  background-color: transparent;
 }
