--- a/popup.css
+++ b/popup.css
@@ -56,8 +56,10 @@ body {
 #householdFieldset {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  width: 28rem;
+  width: 29rem;
   font-size: 9px;
+  border-color: #fff;
+  border-width: 1px;
 }
 
 #householdFieldset > div {
@@ -80,13 +82,25 @@ body {
 .results {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  font-size: 11px;
+  /* column-count: 2;
+  column-gap: 0; */
   width: 100%;
 }
 
-.results > span {
+.results > div {
   border: 1px solid #bbb;
   padding: 6px;
+}
+
+.results .track {
+  font-size: 11px;
+  font-weight: 500;
+}
+
+.results .artist {
+  font-size: 9px;
+  font-style: italic;
+  margin-left: 6px;
 }
 
 #debug {
@@ -125,4 +139,5 @@ button:disabled {
   text-decoration: underline;
   align-self: flex-end;
   cursor: pointer;
+  color: #777;
 }
